# usbwatch-rs

./: .clog.toml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  myrule.yml
.github/workflows/: ci.yml  lint.yml  release.yml  release_nightly.yml
examples/: example_device.yml  example_port.yml  example_rule.yml
pkg/: usbwatch.service
src/: cli.rs  cmds.rs  ctx.rs  device.rs  listen.rs  listener.rs  log.rs  macros.rs  main.rs  port.rs  printer.rs  rule.rs  shutdown.rs  state.rs  tokio_udev.rs  udev.rs  usb.rs  usb_event.rs
src/cli/: check.rs  listen.rs  rule.rs  run.rs  scan.rs
src/cmds/: check.rs  create_device.rs  create_port.rs  create_rule.rs  listen.rs  run.rs  scan.rs
src/rule/: match.rs
src/usb/: device.rs  port.rs
