[package]
name = "usbwatch"
version = "0.0.3"
authors = ["Kevin K. <kbknapp@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]
description = "Monitor USB events and execute actions based on rules"
repository = "https://github.com/kbknapp/usbwatch-rs"
documentation = "https://docs.rs/usbwatch/"
keywords = [
	"udev",
	"usb",
]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
bitflags = "2.2.1"
clap = "3.0.0-beta.2"
futures-core = "0.3.12"
parking_lot = "0.11.1"
serde = { version = "1.0.123", features = ["derive"] }
serde_yaml = "0.8.17"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.3"
tokio-udev = "0.6.0"
tracing = "0.1.23"
tracing-subscriber = { version = "0.2.15", features = ["fmt"] }
yaml-rust = "0.4.5"
