[package]
name = "usbwatch"
version = "0.0.3"
authors = ["Kevin K. <kbknapp@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]
description = "Monitor USB events and execute actions based on rules"
repository = "https://github.com/kbknapp/usbwatch-rs"
documentation = "https://docs.rs/usbwatch/"
keywords = [
	"udev",
	"usb",
]
categories = ["command-line-utilities"]
readme = "README.md"
rust-version = "1.74.1"

[dependencies]
anyhow = "1.0.82"
bitflags = "2.5.0"
clap = { version ="4.5.0", features = ["derive"] }
enum_delegate = "0.2.0"
futures-core = "0.3.12"
once_cell = "1.19.0"
parking_lot = "0.12.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9.21"
strum = { version = "0.26.2", features = ["derive"] }
termcolor = { version = "1.4.1", optional = true }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.3"
tokio-udev = "0.9.1"
tracing = "0.1.23"
tracing-subscriber = { version = "0.3.17", features = ["fmt"] }
udev = "0.8.0"
yaml-rust = "0.4.5"

[features]
default = ["color"]
color = ["dep:termcolor"]
